--- a/style/index.css
+++ b/style/index.css
@@ -19,7 +19,7 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video {  
 margin: 0;  
 padding: 0;  
-border: 0;  
+/*border: 0;*/  
 font-size: 100%;  
 font: inherit;  
 vertical-align: baseline;  
@@ -28,6 +28,7 @@ vertical-align: baseline;
 * {
     box-sizing: border-box;
     max-width:100%;
+    
 }
 /*General Styles*/
 html {
@@ -41,9 +42,11 @@ body {
 
 h1, h2 {
     font-family: 'Josefin Sans', sans-serif;
+    
 }
 h1 {
     font-size: 5rem;
+    
 }
 
 a {
@@ -51,6 +54,8 @@ a {
     text-decoration: none;
     color: white;
     padding: 0 2%;
+    font-size: 2.5rem;
+    text-align: center;
 }
 /*Styles for the header*/
 header {
@@ -58,14 +63,14 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 2%;
-   
+    
 }
 
 nav {
-    width: 55%;
+    width: 65%;
     display: flex;
     justify-content: space-between;
-
+   
 }
 
 .nav {
@@ -101,8 +106,8 @@ nav {
     background-color: dimgray;
     padding: 1%;
     border-radius: 10px;
-    
-    
+    width: 120px;
+    align-self: center;
 }
 
 /* Projects Section Styles*/
@@ -138,4 +143,47 @@ footer {
     display: flex;
     flex-direction: column; 
     align-items: center;  
+}
+
+@media (max-width: 800px) {
+    header {
+        width: 100%;
+        justify-content: center;  
+    }
+}
+
+@media (max-width: 500px) {
+    h1 {
+        font-size: 3rem;
+    }
+    h2 {
+        width: 100%;
+        text-align: center;
+        font-size: 5rem;
+    }
+    header {
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+    }
+    nav a {
+        text-align: center;
+        width: 100%;
+        border: 1px solid white;
+    }
+    nav {
+        flex-direction: column;
+        width: 30%;
+        align-items: center;
+    }
+    .project1, .project2 {
+        flex-direction: column;
+        width: 48%;
+        
+    }
+    main {
+        display: flex;
+        justify-content: space-around;
+    
+    }
 }
